<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tribe9.quizy.MainActivity">

    <!--Main containment Layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!--Header Image-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/git" />

        <!--Question 1, Checkbox-->

        <TextView
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q1b1"
                style="@style/radioButton"
                android:text="@string/q1b1" />

            <CheckBox
                android:id="@+id/q1b2"
                style="@style/radioButton"
                android:text="@string/q1b2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q1b3"
                style="@style/radioButton"
                android:text="@string/q1b3" />

            <CheckBox
                android:id="@+id/q1b4"
                style="@style/radioButton"
                android:text="@string/q1b4" />

        </LinearLayout>

        <!--Question 2, Radio Buttons -->

        <TextView
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q2b1"
                style="@style/radioButton"
                android:text="@string/q2b1" />

            <RadioButton
                android:id="@+id/q2b2"
                style="@style/radioButton"
                android:text="@string/q2b2" />

        </LinearLayout>

        <!--Question 3, Radio Buttons-->

        <TextView
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q3b1"
                style="@style/radioButton"
                android:text="@string/q3b1" />

            <RadioButton
                android:id="@+id/q3b2"
                style="@style/radioButton"
                android:text="@string/q3b2" />

        </LinearLayout>

        <!--Question 4, Checkbox-->

        <TextView
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q4b1"
                style="@style/radioButton"
                android:text="2nd Row" />

            <CheckBox
                android:id="@+id/q4b2"
                style="@style/radioButton"
                android:text="New RadioButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q4b3"
                style="@style/radioButton"
                android:text="2nd Row" />

            <CheckBox
                android:id="@+id/q4b4"
                style="@style/radioButton"
                android:text="New RadioButton" />

        </LinearLayout>
        <!--Question 5, Free Text-->
        <TextView
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/q5TextAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--Grading Button-->
        <Button
            style="@style/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />


    </LinearLayout>


</ScrollView>